refactor: randomPick 로직 개선